# enterprise-ai

./: .dockerignore  .env.example  .gitignore  =0.5.2  CODE_REVIEW.md  DEVELOPER_GUIDE.md  Enterprise-AI-AWS-Deployment-Guide.docx  LICENSE  Makefile  Meridian_Architectural_Review.docx  README.md  RM_PREP_AGENT_ARCHITECTURE.md  TECHNOLOGY_STACK.md  TROUBLESHOOTING.md  architecture-components.xlsx  architecture-glossary.xlsx  architecture-review.md  architecture-techstack.xlsx  architecture.html  cluster-down.sh  deploy-new-services.sh  diagram-enterprise-aws-stack.html  diagram-enterprise-azure-stack.html  diagram-reference-architecture.html  docker-compose.cloud.yml  docker-compose.infra.yml  docker-compose.research.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  pinegrow.json  pyproject.toml  pytest.ini  requirements-dev.txt  skaffold.yaml
.github/workflows/: ci-deploy.yml  ci-evals.yml  ci-integration.yml  ci-unit.yml
_pgbackup/: diagram-reference-architecture_1774013579.html  pinegrow_1774013579.json
agents/: Dockerfile  conftest.py  requirements-test.txt  requirements.txt
agents/analytics-agent/: Dockerfile  requirements.txt
agents/portfolio-watch/: Dockerfile  requirements.txt
agents/researcher/: .env.example  =1.0.0  Dockerfile  requirements.txt
agents/rm-prep/: Dockerfile  requirements-test.txt  requirements.txt
agents/src/: EnterpriseAgentService.py  enterprise_agent_service.py  graph.py  mcp_bridge.py  server.py
agents/tests/: test_graph.py
cleanup/: README.md  orphan_files.py  pass1-findings.md  pass2-findings.md  pass3-findings.md  vulture-allowlist.py
docs/: Agentic_AI_Pipeline_Explorer.html  DEPLOY.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  RM_PREP_ORCHESTRATION_DESIGN.md  RM_PREP_PHASE1_ANALYSIS.md  UX_GUIDED_EXPERIENCE_PLAN.md  agentic-ai-developer-guide.html  agentic-ai-qa.html  check_and_test.sh  cloud-deployment-readiness-report.docx  cluster-up.sh  context-engineering-analysis.docx  diagram-enterprise-aws-stack.html  docker-compose.infra-test.yml  docker-compose.test.yml
docs/architecture/: agent-reference-pattern.md
frontends/agent-ui/: .dockerignore  .env.example  Dockerfile  Frontend_Code_Review.docx  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontends/analytics-dashboard/: Dockerfile  README.md  TELEMETRY_INTEGRATION.md  knip.json  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontends/analytics-ui/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontends/chat-ui/: Dockerfile  chainlit.md  chainlit_app.py  entrypoint.sh  init_db.py  requirements.txt
frontends/research-ui/: .env.example  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontends/rm-prep-ui/: Dockerfile  app.py  requirements.txt
infra/: IMAGE_POLICY.md
infra/azure/: cloud-init.yaml  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
infra/k8s/: network-policies.yaml
infra/terraform/: configure-backends.sh
platform-sdk/: pyproject.toml
platform-sdk/platform_sdk/: __init__.py  agent.py  auth.py  authorized_tool.py  bridge_health.py  cache.py  compaction.py  config.py  errors.py  llm_client.py  logging.py  mcp_bridge.py  mcp_server_base.py  metrics.py  models.py  prompt_manager.py  prompts.py  protocols.py  resilience.py  schema_introspection.py  security.py  telemetry.py  testing.py  user_context.py
platform-sdk/platform_sdk/base/: Agent.py  Application.py  McpService.py  __init__.py  agent.py  application.py  mcp_service.py
platform-sdk/platform_sdk/config/: AgentConfig.py  MCPConfig.py  __init__.py  agent_config.py  helpers.py  mcp_config.py
platform-sdk/platform_sdk/services/: AgentBuilder.py  CheckpointerFactory.py  __init__.py  agent_builder.py  api_key_verifier.py  chat_llm_factory.py
platform/clickhouse/: keeper-config.xml
platform/config/: litellm-local.yaml  litellm-prod.yaml
platform/db/: 20_test_sfcrm_schema.sql  21_test_sfcrm_seed.sql  30_test_bankdw_schema.sql  31_test_bankdw_seed.sql  40_metadata_comments.sql  init.sql  relationships.yaml  rm_prep_schema.sql  rm_prep_seed.sql
platform/grafana/: loki-local.yaml  promtail-local.yaml
platform/langfuse/: seed-project.sh
platform/nginx/: nginx.conf
platform/otel/: otel-local.yaml  otel-prod.yaml
scripts/: cloud-deploy.sh  cloud-tls.sh
services/continuous_embedding_pipeline/: pyproject.toml
services/continuous_embedding_pipeline/src/: __init__.py  config.py  container.py
services/continuous_embedding_pipeline/src/domain/: models.py
services/continuous_embedding_pipeline/src/evaluation/: ragas_gate.py
services/continuous_embedding_pipeline/src/mining/: hard_negatives.py
services/continuous_embedding_pipeline/src/training/: trainer.py
services/continuous_embedding_pipeline/tests/: conftest.py  test_mining.py  test_trainer.py
testdata/: bankdw_schema.csv  sfcrm_schema.csv
testdata/bankdw/: bridge_party_account.csv  dim_bank.csv  dim_party.csv  dim_product.csv  fact_payments.csv
testdata/sfcrm/: Account.csv  Campaign.csv  CampaignMember.csv  Case.csv  Contact.csv  Contract.csv  Event.csv  Lead.csv  Opportunity.csv  OpportunityContactRole.csv  OpportunityLineItem.csv  Pricebook2.csv  PricebookEntry.csv  Product2.csv  Task.csv
tests/: conftest.py  requirements.txt
tests/evals/: conftest.py  judge.py  test_faithfulness.py  test_specialist_fidelity.py  test_synthesis_quality.py
tests/fixtures/: test_tokens.py
tests/integration/: conftest.py  test_opa_policies.py  test_payments_sql.py  test_rm_prep_server.py
tests/unit/: test_auth.py  test_brief_render.py  test_cache_key.py  test_chat_llm_factory_stateless.py  test_mcp_bridge_user_ctx.py  test_no_module_auth_state.py  test_setup_checkpointer.py  test_token_aware_compaction.py  test_unsupported_schema.py
tools/chat-ui/: Dockerfile  chainlit.md  chainlit_app.py  entrypoint.sh  init_db.py  requirements.txt
tools/data-mcp/: Dockerfile  conftest.py  requirements-test.txt  requirements.txt
(+453 files in other folders)
