[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-embedding-pipeline"
version = "0.1.0"
description = "Data-flywheel microservice: hard-negative mining, MNRL fine-tuning, RAGAS-gated deployment for banking-domain embeddings."
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # ── Configuration & DI ────────────────────────────────────────────
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "dependency-injector>=4.41,<5",

    # ── ML / Embeddings ───────────────────────────────────────────────
    "sentence-transformers>=2.6,<4",
    "torch>=2.1",
    "datasets>=2.16,<3",

    # ── Vector store ──────────────────────────────────────────────────
    "langchain-community>=0.0.20",
    "pgvector>=0.2,<1",
    "asyncpg>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",

    # ── Evaluation ────────────────────────────────────────────────────
    "ragas>=0.1,<1",

    # ── Observability ─────────────────────────────────────────────────
    "langfuse>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
